Changed nav color to add a bit of blue/fixed tabbar z-index

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ hr {
 }
 
 .bg-dk-gry-gradient {
-  background: #676767;
+  background: #44454C;
 }
 
 .bg-lt-gry {
@@ -355,8 +355,9 @@ hr {
     width:100%;
     height:36px;
     top:50px;
-    background-color: #494949;
+    background-color: #2A2B2F;
     position:fixed;
+    z-index: 9999999;
 }
 
 .tab-bar-container {
@@ -387,7 +388,7 @@ hr {
 
 .tab-bar-left li {
     float: left;
-    border-right: 1px solid #676767;
+    border-right: 1px solid #43454C;
 }
 
 .tab-bar-right {
@@ -427,7 +428,7 @@ hr {
     border-right: 6px solid transparent;
     border-left: 6px solid transparent;
     border-bottom: 6px solid transparent;
-    border-top: 6px solid #676767;
+    border-top: 6px solid #44454C;
     position: absolute;
     top: 0;
     right: 0;
